
------------------------------------------------------------------------------
??/??/?? tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
         hanatok, rmeli, aditya-kamath, tirkarthi, LeonardoBarneschi, hejamu,
         biogen98, orioncohen, z3y50n, hp115, ojeda-e, thadanipaarth

  * 2.0.0

Fixes
  * Removed deprecated parameters `n_jobs` and `precompute_distances` of
    sklearn.cluster.KMeans (Issue #2986)
  * Helix_analysis coverage raised to 100% and `from __future__ import`
    removed (Issue #3209)
  * Fixed 'sphzone', 'sphlayer', 'cyzone', and 'cylayer' to return empty if the
   zone/layer is empty, consistent with 'around' (Issue #2915)
  * A Universe created from an ROMol with no atoms returns now a Universe 
    with 0 atoms (Issue #3142)
  * ValueError raised when empty atomgroup is given to DensityAnalysis
    without a user defined grid. UserWarning displayed when user defined
    grid is provided. (Issue #3055)
  * Fixed import of several `__all__` lists (PR #3013)
  * atommethods (_get_prev/next_residues_by_resid) returns empty residue group
    when given empty residue group (Issue #3089)
  * MOL2 files without bonds can now be read and written (Issue #3057)
  * Write `CONECT` record only once in multi-model PDB files (Issue #3018)
  * Add '.nc' as a recognised extension for the NCDFWriter (Issue #3030)
  * PDB parser now assigns empty records for partially missing/invalid elements
    instead of not assigning the elements attribute at all (Issue #2422)
  * PDB writer now uses elements attribute instead of guessing elements from
    atom name (Issue #2423)
  * Cleanup and parametrization of test_atomgroup.py (Issue #2995)
  * The methods provided by topology attributes now appear in the
    documentation (Issue #1845)