@@ -162,7 +162,8 @@ Chronological list of authors
   - Hannah Pollak
   - Estefania Barreto-Ojeda
   - Paarth Thadani
-
+  - Henry Kobin
+  
 External code
 -------------
 
